Fix canvases error on mobile

--- a/style.css
+++ b/style.css
@@ -100,7 +100,13 @@ header, main, footer {
     height: 40vh;
     width: 80vw;
   }
-  #toolboxCanvases, #toolboxButtons {
+  #toolboxCanvases {
+    flex-direction: column;
+    align-items: center;
+    padding-right: 15px;
+    margin-bottom: 30px;
+  }
+  #toolboxButtons {
     flex-direction: column;
     align-items: center;
     height: 200px;
